@@ -64,7 +64,10 @@ $language_data = array (
     'COMMENT_SINGLE' => array(),
     'COMMENT_MULTI' => array(),
     //DOS comment lines
-    'COMMENT_REGEXP' => array(1 => "/^\s*@?REM.*$/mi"),
+    'COMMENT_REGEXP' => array(
+        1 => "/^\s*@?REM\b.*$/mi",
+        2 => "/^\s*::.*$/m"
+        ),
     'CASE_KEYWORDS' => GESHI_CAPS_NO_CHANGE,
     'QUOTEMARKS' => array(),
     'ESCAPE_CHAR' => '',
@@ -114,7 +117,8 @@ $language_data = array (
             4 => 'color: #0000ff; font-weight: bold;'
             ),
         'COMMENTS' => array(
-            1 => 'color: #808080; font-style: italic;'
+            1 => 'color: #808080; font-style: italic;',
+            2 => 'color: #b100b1; font-style: italic;',
             ),
         'ESCAPE_CHAR' => array(
             0 => 'color: #ff0000; font-weight: bold;'
